kubeflow/jupyter/jupyter-web-app/upstream/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jupyter-web-app-jupyter-web-app
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - 'kubeflow.bei.com'
  http:
  - match:
    - uri:
        prefix: /dex
    route:
    - destination:
        host: dex.auth.svc.cluster.local
        port:
          number: 5556
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: oauth2-proxy.kubeflow.svc.cluster.local
        port:
          number: 80
